crates/analyzer/tests/snapshots/analysis__revert.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ revert.fe:2:5
  │
2 │     pub msg: u256
  │     ^^^^^^^^^^^^^ u256
3 │     pub val: bool
  │     ^^^^^^^^^^^^^ bool

note: 
  ┌─ revert.fe:7:5
  │
7 │     my_other_error: OtherError
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError

note: 
   ┌─ revert.fe:9:5
   │  
 9 │ ╭     pub fn bar() -> u256 {
10 │ │         revert
11 │ │     }
   │ ╰─────^ self: None, params: [] -> u256

note: 
   ┌─ revert.fe:13:5
   │  
13 │ ╭     pub fn revert_custom_error(ctx: Context) {
14 │ │         ctx.send_value(to: address(0), wei: 100)
15 │ │     }
   │ ╰─────^ self: None, params: [{ label: None, name: ctx, typ: Context }] -> ()

note: 
   ┌─ revert.fe:14:9
   │
14 │         ctx.send_value(to: address(0), wei: 100)
   │         ^^^                        ^ u256: Value
   │         │                           
   │         Context: Memory

note: 
   ┌─ revert.fe:14:28
   │
14 │         ctx.send_value(to: address(0), wei: 100)
   │                            ^^^^^^^^^^       ^^^ u256: Value
   │                            │                 
   │                            address: Value

note: 
   ┌─ revert.fe:14:9
   │
14 │         ctx.send_value(to: address(0), wei: 100)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (): Value

note: 
   ┌─ revert.fe:17:5
   │  
17 │ ╭     pub fn revert_other_error() {
18 │ │         revert OtherError(msg: 1, val: true)
19 │ │     }
   │ ╰─────^ self: None, params: [] -> ()

note: 
   ┌─ revert.fe:18:32
   │
18 │         revert OtherError(msg: 1, val: true)
   │                                ^       ^^^^ bool: Value
   │                                │        
   │                                u256: Value

note: 
   ┌─ revert.fe:18:16
   │
18 │         revert OtherError(msg: 1, val: true)
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Memory

note: 
   ┌─ revert.fe:21:5
   │  
21 │ ╭     pub fn revert_other_error_from_sto(self) {
22 │ │         self.my_other_error = OtherError(msg: 1, val: true)
23 │ │         revert self.my_other_error.to_mem()
24 │ │     }
   │ ╰─────^ self: Some(Mutable), params: [] -> ()

note: 
   ┌─ revert.fe:22:9
   │
22 │         self.my_other_error = OtherError(msg: 1, val: true)
   │         ^^^^ Foo: Value

note: 
   ┌─ revert.fe:22:9
   │
22 │         self.my_other_error = OtherError(msg: 1, val: true)
   │         ^^^^^^^^^^^^^^^^^^^                   ^       ^^^^ bool: Value
   │         │                                     │        
   │         │                                     u256: Value
   │         OtherError: Storage { nonce: Some(0) }

note: 
   ┌─ revert.fe:22:31
   │
22 │         self.my_other_error = OtherError(msg: 1, val: true)
   │                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Memory
23 │         revert self.my_other_error.to_mem()
   │                ^^^^ Foo: Value

note: 
   ┌─ revert.fe:23:16
   │
23 │         revert self.my_other_error.to_mem()
   │                ^^^^^^^^^^^^^^^^^^^ OtherError: Storage { nonce: Some(0) }

note: 
   ┌─ revert.fe:23:16
   │
23 │         revert self.my_other_error.to_mem()
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Storage { nonce: Some(0) } => Memory


